test/cases/bad/bad037.lat
// Not a member

class A {

}

class B extends A {
    int x;
}

int main() {
    A a = new A;
    // new B.x; // ok

    a.x;

    return 0;
}